# apache-airflow-providers-oqullus

./: README.md  main.py  pyproject.toml
airflow/providers/oqullus/hooks/: __init__.py  teams_webhook.py
airflow/providers/oqullus/notifications/: __init__.py  email.py  multi.py  teams.py  utils.py
airflow/providers/oqullus/operators/: __init__.py  spark_kubernetes.py
examples/dags/: sample_oqullus_local.py
tests/unit/hooks/: test_teams_webhook.py
tests/unit/notifications/: test_email.py  test_multi.py
