[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apache-airflow-providers-oqullus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=2.10.5",
    "apache-airflow-providers-cncf-kubernetes",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["airflow*"]
